--- a/03_Visualization.ipynb
+++ b/03_Visualization.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Corso di Probabilità e Statistica - Visualizzazione delle distribuzioni\n",
     "\n",
